fix: scroll padding-right on mobile

--- a/website/components/io-card-container/style.module.css
+++ b/website/components/io-card-container/style.module.css
@@ -93,5 +93,14 @@
 
   & > li {
     display: flex;
+
+    @media (--small) {
+      &:last-of-type::after {
+        content: '';
+        width: 24px;
+        flex-shrink: 0;
+        background: lime;
+      }
+    }
   }
 }
